--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "css-loader": "^2.1.1",
     "es6-promise": "^4.2.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-saver": "^2.0.2",
     "html-to-image": "^0.1.0",
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
-    "jquery": "^3.0.0",
+    "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "numeral": "^2.0.6",
