--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^2.1.1",
+    "downloadjs": "^1.4.7",
     "es6-promise": "^4.2.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-saver": "^2.0.2",
