--- a/package.json
+++ b/package.json
@@ -4,18 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "webpack",
-    "watch": "webpack --watch",
-    "start": "webpack-dev-server --hot --inline --open",
-    "build": "webpack"
+    "start": "webpack-dev-server --hot --inline --open --config webpack.dev.js",
+    "dev": "npm start",
+    "build": "webpack --config webpack.prod.js",
+    "test": "npm start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "css-loader": "^2.1.1",
+    "@reduxjs/toolkit": "^1.4.0",
     "downloadjs": "^1.4.7",
     "es6-promise": "^4.2.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -23,18 +20,36 @@
     "html-to-image": "^0.1.0",
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
-    "jquery": "^3.4.1",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
+    "jquery": "^3.5.1",
     "numeral": "^2.0.6",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^6.0.7",
+    "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
+    "react-bootstrap-typeahead": "^5.1.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "simplebar": "^4.0.0-alpha.3",
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
-    "vue": "^2.6.10",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.3.0"
+    "vue": "^2.6.10"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "bootstrap": "^4.5.2",
+    "copy-webpack-plugin": "^6.0.3",
+    "css-loader": "^2.1.1",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.14.1",
+    "react-bootstrap": "^1.3.0",
+    "sass-loader": "^6.0.7",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.1.2"
   }
 }
