--- a/package.json
+++ b/package.json
@@ -13,16 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
+    "css-loader": "^6.5.1",
     "downloadjs": "^1.4.7",
     "es6-promise": "^4.2.6",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-saver": "^2.0.2",
     "html-to-image": "^0.1.0",
-    "html-webpack-plugin": "^3.2.0",
-    "isomorphic-fetch": "^2.2.1",
+    "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.5.1",
     "numeral": "^2.0.6",
-    "postcss-loader": "^3.0.0",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-bootstrap-typeahead": "^5.1.1",
@@ -31,8 +29,6 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "simplebar": "^4.0.0-alpha.3",
-    "style-loader": "^0.19.1",
-    "uglifyjs-webpack-plugin": "^2.1.2",
     "vue": "^2.6.10"
   },
   "devDependencies": {
@@ -42,14 +38,13 @@
     "babel-loader": "^8.1.0",
     "bootstrap": "^4.5.2",
     "copy-webpack-plugin": "^6.0.3",
-    "css-loader": "^2.1.1",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.14.1",
+    "mini-css-extract-plugin": "^2.4.6",
     "react-bootstrap": "^1.3.0",
-    "sass-loader": "^6.0.7",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3",
     "webpack-merge": "^5.1.2"
   }
 }
