--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "npm start",
     "build": "webpack --config webpack.prod.js",
     "test": "npm start"
-},
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -39,6 +39,7 @@
     "bootstrap": "^4.5.2",
     "copy-webpack-plugin": "^6.0.3",
     "mini-css-extract-plugin": "^2.4.6",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "react-bootstrap": "^1.3.0",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
